--- a/src/Styles/ProductCarousel.css
+++ b/src/Styles/ProductCarousel.css
@@ -55,7 +55,7 @@
 
 .product-carousel__scroll-button {
 	position: absolute;
-	z-index: 10;
+	z-index: -1;
 	width: 44px;
 	height: 44px;
 	border-radius: 50%;
